[package]
name = "std_to_no_std"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0.0", features = [
  "esp32",
  "unstable",
] } # Ajout du feature unstable

# Nouvelles crates ajoutées

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32"] }
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
